Highlight list filters & fix cf events list clear filter - In list header highlight values that effect the list   - multi filters   - text filters   - sort   - chips - This includes custom filters that live outside of the list component   - cf events list   - helm charts list - Also fix an issue in the cf events list where the actee filter's `x` button was not visible on click of actee

--- a/src/frontend/packages/core/src/shared/components/list/list.component.theme.scss
+++ b/src/frontend/packages/core/src/shared/components/list/list.component.theme.scss
@@ -5,6 +5,7 @@
   $foreground-colors: map-get($theme, foreground);
   $background-colors: map-get($theme, background);
   $is-dark: map-get($theme, is-dark);
+  $accent: map-get($theme, accent);
 
   $header-selected-color: #fff;
   @if $is-dark == true {
@@ -23,6 +24,12 @@
         @include breakpoint(mobileonly) {
           flex-wrap: wrap;
         }
+      }
+
+      .mat-select-value-text,
+      .mat-input-element.ng-dirty,
+      .mat-chip {
+        color: mat-color($accent);
       }
     }
   }
